# UltraSearch

./: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AdvancedSearch.tsx  BasicSearch.tsx  FileList.tsx  PreviewModal.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: SearchPage.tsx  SettingsPage.tsx
frontend/src/styles/: global.css
src-tauri/: Cargo.toml  generate_icon.bat  tauri.conf.json
src-tauri/src/: indexer.rs  main.rs  preview.rs  searcher.rs
