[package]
name = "UltraSearch"
version = "0.1.0"
description = "A fast file search application"
authors = ["JingYe"]
edition = "2021"

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"
notify = "6.1"
crossbeam-channel = "0.5"
memmap2 = "0.9"
futures = "0.3"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] } 
